# Py_Basic_Commands

./: .yamlint  CHANGELOG.md  LICENSE  LICENSE.md  README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish-pypi.yml  python-publish-pypitest.yml  python-publish.yml  python-publish_pypi.yml  test-publish-pypitest.yml
Logo/: py_basic_commands.psd
py_basic_commands/: __init__.py  base.py  basic_commands.py  example_class.py  file_dir_funcs.py  fscripts.py  function_timer.py  json_funcs.py  timer.py
py_basic_commands/file_dir_scripts/: __init__.py  create_dirs.py  create_file.py  file_editor.py  get_src_path.py  join_path.py  read_file.py  remove_file_dir.py  write_file.py
py_basic_commands/fscripts/: __init__.py  finput.py  fprint.py  fprint_array.py
py_basic_commands/json_scripts/: __init__.py  create_json.py  json_editor.py  prettify_json.py  read_json.py  write_json.py
py_basic_commands/other/: __init__.py  basic_commands.py  basic_functions.py  choose_from_list.py  function_timer.py  timer.py
