[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"    
]
build-backend = "setuptools.build_meta"

[project]
name = "py_basic_commands"
version = "0.1.54"
authors = [
  { name="Rasmus Ohert", email="rassemichael@gmail.com" },
]
description = "Basic tools for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"GitHub" = "https://github.com/RasseTheBoy/Py_Basic_Commands"