[metadata]
name = py_basic_commands
version = 0.1.43
author = Rasmus Ohert
author_email = rassemichael@gmail.com
description = Basic tools for Python
long_description = A package that has some basic tools for your basic Python needs
url = https://github.com/RasseTheBoy/Py_Basic_Commands
keywords = python, tool, help
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    
[options]
packages = find:
python_requires = >=3.7